# Net_Worth_Calculator

./: .gitignore  README.md  database.py  main.py  models.py  pyproject.toml  render.yaml  requirements.txt
static/: style.css
templates/: base.html  history.html  index.html  login.html  signup.html
